Stopped scrollbar from showing if page overflows

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,4 +14,9 @@
     content: "";
     clear: both;
     display: table;
-  }
+}
+
+/* Stop scroll bar from displaying if page overflows */
+body {
+    overflow-y: hidden;
+}
